# atomics-experiments

./: .btcdeb_history  alice.descr  alice.sh  bdk.sh  bob.descr  bob.sh  install_bdk.sh  install_nigiri.sh  main.descr  main.sh  shell.nix
atomic-tools/: Cargo.toml
atomic-tools/src/: main.rs
bscript/: .btcdeb_history  alice.bs  alice.miniscript  hash.bs  hashlock_test.sh  run_btc.sh
nix/: containers.nix  overlay.nix  sources.json
nix/modules/: ergvein-rusty.nix  ergvein.nix
nix/modules/dashboards/: indexer.json
