[package]
name = "atomic-tools"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bitcoin = "0.26.2"
miniscript = { version = "5.1.0", features = [ "compiler" ] }
bitcoin_hashes = "0.10.0"
secp256k1 = "0.20.3"
bdk = "0.9.0"